tests/ui/resolve/issue-39559.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-39559.rs:14:18
   |
LL |     entries: [T; D::dim()],
   |                  ^ cannot perform const operation using `D`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

